// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// https://raw.githubusercontent.com/grpc/grpc-java/master/examples/src/main/proto/helloworld.proto

syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "SecuritySystemService";
option java_package = "DS.SmartHome.SecurityService";
package SecurityService;

// Reference https://grpc.io/docs/what-is-grpc/core-concepts/

service SecurityService {
	// client streaming rpc
	rpc performSecurityProtocol (stream SecurityProtocolRequest) returns (SecurityProtocolReply) {} //client manda trancar tudo
	// server streaming rpc
	rpc getSecurityStatus (SecurityStatusRequest) returns (stream SecurityStatusReply) {} // recebe o status de seguranca da casa
}

// status of the home security system
message SecuritySystemStatus {
	bool system_armed = 1;
	bool doors_locked = 2;
	string status = 3;
}

// protocol to lock doors and arm system
message SecurityProtocol {
	bool lock_front_door = 1;
	bool lock_back_door = 2;
	bool lock_all_doors = 3;
	bool arm_system = 4;
}

// request message containing status of the home security system
message SecurityStatusRequest {
	bool run = 1;
}

// response message containing status of the home security system
message SecurityStatusReply {
	SecuritySystemStatus securitySystemStatus = 1;
}

// request message containing protocol to lock doors and arm system
message SecurityProtocolRequest {
	SecurityProtocol securityProtocol = 1;
}

// response message containing protocol to lock doors and arm system
message SecurityProtocolReply {
	string result = 1;
}